// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`рендер документа целиком > HTML документа целиком 1`] = `
"<h2 id="00000000-0000-4000-8000-000000000002">Заголовок второго уровня</h2>
<p id="00000000-0000-4000-8000-000000000001">Обычный текст, <strong>полужирный</strong>, <em>курсив</em> и <a href="https://altera.example/about">ссылка</a>.</p>
<h3 id="00000000-0000-4000-8000-000000000017">Подзаголовок</h3>
<blockquote id="00000000-0000-4000-8000-000000000003" data-kind="pull"><p id="00000000-0000-4000-8000-000000000004">Выносная цитата в две строки.</p></blockquote>
<ul id="00000000-0000-4000-8000-000000000005"><li id="00000000-0000-4000-8000-000000000006"><p id="00000000-0000-4000-8000-000000000007">Первый пункт</p></li><li id="00000000-0000-4000-8000-000000000008"><p id="00000000-0000-4000-8000-000000000009">Второй пункт</p></li></ul>
<ol id="00000000-0000-4000-8000-000000000010"><li id="00000000-0000-4000-8000-000000000011"><p id="00000000-0000-4000-8000-000000000012">Шаг один</p></li><li id="00000000-0000-4000-8000-000000000013"><p id="00000000-0000-4000-8000-000000000014">Шаг два</p></li></ol>
<figure id="00000000-0000-4000-8000-000000000015" data-size="wide" data-asset-id="00000000-0000-4000-8000-000000000900"><img src="https://media.example/altera/river.webp" alt="Рассвет над рекой" width="1440" height="960"><figcaption>Утро на Оке <span class="attribution">Фото: Мария Иванова</span></figcaption></figure>
<hr id="00000000-0000-4000-8000-000000000016">"
`;

exports[`рендер документа целиком > Markdown документа целиком 1`] = `
"## Заголовок второго уровня

Обычный текст, **полужирный**, *курсив* и [ссылка](https://altera.example/about).

### Подзаголовок

> Выносная цитата в две строки.

- Первый пункт
- Второй пункт

1. Шаг один
2. Шаг два

![Рассвет над рекой](https://media.example/altera/river.webp)

*Утро на Оке — Фото: Мария Иванова*

---"
`;

exports[`снимки рендера каждого узла каталога > blockquote > HTML 1`] = `"<blockquote id="00000000-0000-4000-8000-000000000003" data-kind="pull"><p id="00000000-0000-4000-8000-000000000004">Выносная цитата в две строки.</p></blockquote>"`;

exports[`снимки рендера каждого узла каталога > blockquote > Markdown 1`] = `"> Выносная цитата в две строки."`;

exports[`снимки рендера каждого узла каталога > blockquote > дерево рендера 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "marks": [],
              "text": "Выносная цитата в две строки.",
            },
          ],
          "component": "ProseParagraph",
          "props": {
            "id": "00000000-0000-4000-8000-000000000004",
          },
        },
      ],
      "component": "ProseQuote",
      "props": {
        "id": "00000000-0000-4000-8000-000000000003",
        "kind": "pull",
      },
    },
  ],
  "component": "ProseArticle",
  "props": {},
}
`;

exports[`снимки рендера каждого узла каталога > bulletList > HTML 1`] = `"<ul id="00000000-0000-4000-8000-000000000005"><li id="00000000-0000-4000-8000-000000000006"><p id="00000000-0000-4000-8000-000000000007">Первый пункт</p></li><li id="00000000-0000-4000-8000-000000000008"><p id="00000000-0000-4000-8000-000000000009">Второй пункт</p></li></ul>"`;

exports[`снимки рендера каждого узла каталога > bulletList > Markdown 1`] = `
"- Первый пункт
- Второй пункт"
`;

exports[`снимки рендера каждого узла каталога > bulletList > дерево рендера 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "marks": [],
                  "text": "Первый пункт",
                },
              ],
              "component": "ProseParagraph",
              "props": {
                "id": "00000000-0000-4000-8000-000000000007",
              },
            },
          ],
          "component": "ProseListItem",
          "props": {
            "id": "00000000-0000-4000-8000-000000000006",
          },
        },
        {
          "children": [
            {
              "children": [
                {
                  "marks": [],
                  "text": "Второй пункт",
                },
              ],
              "component": "ProseParagraph",
              "props": {
                "id": "00000000-0000-4000-8000-000000000009",
              },
            },
          ],
          "component": "ProseListItem",
          "props": {
            "id": "00000000-0000-4000-8000-000000000008",
          },
        },
      ],
      "component": "ProseList",
      "props": {
        "id": "00000000-0000-4000-8000-000000000005",
        "ordered": false,
      },
    },
  ],
  "component": "ProseArticle",
  "props": {},
}
`;

exports[`снимки рендера каждого узла каталога > figure > HTML 1`] = `"<figure id="00000000-0000-4000-8000-000000000015" data-size="wide" data-asset-id="00000000-0000-4000-8000-000000000900"><img src="https://media.example/altera/river.webp" alt="Рассвет над рекой" width="1440" height="960"><figcaption>Утро на Оке <span class="attribution">Фото: Мария Иванова</span></figcaption></figure>"`;

exports[`снимки рендера каждого узла каталога > figure > Markdown 1`] = `
"![Рассвет над рекой](https://media.example/altera/river.webp)

*Утро на Оке — Фото: Мария Иванова*"
`;

exports[`снимки рендера каждого узла каталога > figure > дерево рендера 1`] = `
{
  "children": [
    {
      "children": [],
      "component": "ProseFigure",
      "props": {
        "alt": "Рассвет над рекой",
        "assetId": "00000000-0000-4000-8000-000000000900",
        "attribution": "Фото: Мария Иванова",
        "caption": "Утро на Оке",
        "height": 960,
        "id": "00000000-0000-4000-8000-000000000015",
        "size": "wide",
        "src": "https://media.example/altera/river.webp",
        "width": 1440,
      },
    },
  ],
  "component": "ProseArticle",
  "props": {},
}
`;

exports[`снимки рендера каждого узла каталога > heading > HTML 1`] = `"<h2 id="00000000-0000-4000-8000-000000000002">Заголовок второго уровня</h2>"`;

exports[`снимки рендера каждого узла каталога > heading > Markdown 1`] = `"## Заголовок второго уровня"`;

exports[`снимки рендера каждого узла каталога > heading > дерево рендера 1`] = `
{
  "children": [
    {
      "children": [
        {
          "marks": [],
          "text": "Заголовок второго уровня",
        },
      ],
      "component": "ProseHeading",
      "props": {
        "id": "00000000-0000-4000-8000-000000000002",
        "level": 2,
      },
    },
  ],
  "component": "ProseArticle",
  "props": {},
}
`;

exports[`снимки рендера каждого узла каталога > horizontalRule > HTML 1`] = `"<hr id="00000000-0000-4000-8000-000000000016">"`;

exports[`снимки рендера каждого узла каталога > horizontalRule > Markdown 1`] = `"---"`;

exports[`снимки рендера каждого узла каталога > horizontalRule > дерево рендера 1`] = `
{
  "children": [
    {
      "children": [],
      "component": "ProseDivider",
      "props": {
        "id": "00000000-0000-4000-8000-000000000016",
      },
    },
  ],
  "component": "ProseArticle",
  "props": {},
}
`;

exports[`снимки рендера каждого узла каталога > orderedList > HTML 1`] = `"<ol id="00000000-0000-4000-8000-000000000010"><li id="00000000-0000-4000-8000-000000000011"><p id="00000000-0000-4000-8000-000000000012">Шаг один</p></li><li id="00000000-0000-4000-8000-000000000013"><p id="00000000-0000-4000-8000-000000000014">Шаг два</p></li></ol>"`;

exports[`снимки рендера каждого узла каталога > orderedList > Markdown 1`] = `
"1. Шаг один
2. Шаг два"
`;

exports[`снимки рендера каждого узла каталога > orderedList > дерево рендера 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "marks": [],
                  "text": "Шаг один",
                },
              ],
              "component": "ProseParagraph",
              "props": {
                "id": "00000000-0000-4000-8000-000000000012",
              },
            },
          ],
          "component": "ProseListItem",
          "props": {
            "id": "00000000-0000-4000-8000-000000000011",
          },
        },
        {
          "children": [
            {
              "children": [
                {
                  "marks": [],
                  "text": "Шаг два",
                },
              ],
              "component": "ProseParagraph",
              "props": {
                "id": "00000000-0000-4000-8000-000000000014",
              },
            },
          ],
          "component": "ProseListItem",
          "props": {
            "id": "00000000-0000-4000-8000-000000000013",
          },
        },
      ],
      "component": "ProseList",
      "props": {
        "id": "00000000-0000-4000-8000-000000000010",
        "ordered": true,
      },
    },
  ],
  "component": "ProseArticle",
  "props": {},
}
`;

exports[`снимки рендера каждого узла каталога > paragraph > HTML 1`] = `"<p id="00000000-0000-4000-8000-000000000001">Обычный текст, <strong>полужирный</strong>, <em>курсив</em> и <a href="https://altera.example/about">ссылка</a>.</p>"`;

exports[`снимки рендера каждого узла каталога > paragraph > Markdown 1`] = `"Обычный текст, **полужирный**, *курсив* и [ссылка](https://altera.example/about)."`;

exports[`снимки рендера каждого узла каталога > paragraph > дерево рендера 1`] = `
{
  "children": [
    {
      "children": [
        {
          "marks": [],
          "text": "Обычный текст, ",
        },
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "полужирный",
        },
        {
          "marks": [],
          "text": ", ",
        },
        {
          "marks": [
            {
              "type": "italic",
            },
          ],
          "text": "курсив",
        },
        {
          "marks": [],
          "text": " и ",
        },
        {
          "marks": [
            {
              "attrs": {
                "href": "https://altera.example/about",
              },
              "type": "link",
            },
          ],
          "text": "ссылка",
        },
        {
          "marks": [],
          "text": ".",
        },
      ],
      "component": "ProseParagraph",
      "props": {
        "id": "00000000-0000-4000-8000-000000000001",
      },
    },
  ],
  "component": "ProseArticle",
  "props": {},
}
`;
